Revision history for Net-XMPP2

0.01
        First version, released on an unsuspecting world.
