@@ -1,5 +1,6 @@
 Revision history for Net-XMPP2
 
 0.01
-        First version, released on an unsuspecting world.
+        - implemented 95% of RFC 3920
+        - first version, released on an unsuspecting world :-)
 
